# qt5compat-feedstock

./: README.md
recipe/: conda_build_config.yaml  meta.yaml
recipe/test/: CMakeLists.txt  test_qt5compat.cpp
